# MMALPP

./: CMakeLists.txt  README.md  example.cpp  main.cpp
include/: mmal_component.h  mmal_exceptions.h  mmal_functions.h  mmal_port.h  mmal_types.h  support.h
mmalpp/: mmalpp.h
mmalpp/include/: mmalpp_buffer.h  mmalpp_component.h  mmalpp_connection.h  mmalpp_fwd_decl.h  mmalpp_pool.h  mmalpp_port.h  mmalpp_queue.h  mmalpp_support.h  mmalpp_types.h
mmalpp/include/utils/: mmalpp_buffer_utils.h  mmalpp_component_utils.h  mmalpp_connection_utils.h  mmalpp_pool_utils.h  mmalpp_port_utils.h  mmalpp_queue_utils.h
mmalpp/include/utils/exceptions/: mmalpp_exceptions.h
